Last push for the last day
